# binkd

./: README.md  meson.build  tasks.py
docs/: Makefile  binkd-ref-en.txt  binkd-ug-ru.htm  binkd.cfg  binkd.conf  binkd9x.txt  binkd9x.txt.en  binkdfaq.txt.ru  howto-en.texi  howto-ru.texi
src/: Config.h  assert.h  binkd.c  binlog.c  binlog.h  branch.c  breaksig.c  bsy.c  bsy.h  btypes.h  client.c  client.h  common.h  compress.c  compress.h  confopt.h  crypt.c  crypt.h  exitproc.c  ftnaddr.c  ftnaddr.h  ftndom.c  ftndom.h  ftnnode.c  ftnnode.h  ftnq.c  ftnq.h  getw.c  getw.h  https.c  https.h  inbound.c  inbound.h  iphdr.h  iptools.c  iptools.h  md5b.c  md5b.h  perlhooks.c  perlhooks.h  (+28 more)
src/unix/: daemonize.c  daemonize.h  getfree.c  rename.c  setpttl.c
